[package]
name = "stm32g030"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"
stm32g0 = { version = "*", features = ["stm32g030"] }

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32g0xx-hal]
version = "0.1.0"
features = ["stm32g030", "rt"]

# Позволяет использовать `cargo fix`!
[[bin]]
name = "stm32g030"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация
